fixed error message because I am an idiot!

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,5 +2,5 @@
 
 {% block content %}
   <h1>Hi, welcome to Michael and Eric's running app.</h1>
-  <h4><a href="/input">Click here</a> to find a running route!</h4>
+  <h4><a href="./input">Click here</a> to find a running route!</h4>
 {% endblock %}
