--- a/app/templates/input.html
+++ b/app/templates/input.html
@@ -3,6 +3,7 @@
 {% block content %}
   <h1>Run Data</h1>
   <form action="" method="post" novalidate>
+    {{ form.hidden_tag() }}
     <p>
       {{ form.distance.label }}<br>
       {{ form.distance }}
