--- a/app/templates/input.html
+++ b/app/templates/input.html
@@ -12,6 +12,14 @@
       {{ form.pace.label }}<br>
       {{ form.pace }}
     </p>
+    <p>
+      {{ form.latitude.label }}<br>
+      {{ form.latitude }}
+    </p>
+    <p>
+      {{ form.longitude.label }}<br>
+      {{ form.longitude }}
+    </p>
     <p>{{ form.submit() }}</p>
   </form>
 {% endblock %}
